[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
armonik = { version = "3.28.0-beta-0", features = ["client", "server"] }
async-stream = "0.3"
futures = "0.3"
config = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
mimalloc = { version = "0.1", features = ["v3"] }
quick_cache = "0.6"
rayon = "1.11"
thread_local = "1.1"
crossbeam-deque = "0.8"

[profile.release]
lto = true
