[package]
name = "pdc-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = [
  "charset",
  "rustls-tls",
], default-features = false }
serde_json = "1"
kube = { version = "0.91", features = [
  "client",
  "runtime",
  "rustls-tls",
], default-features = false }
k8s-openapi = { version = "0.22", features = ["v1_26"] }
json-patch = "1.4"
futures = "0.3"
clap = { version = "4.5.3", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
