[package]
name = "pdc-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = [
  "charset",
  "rustls-tls",
], default-features = false }
serde_json = "1"
kube = { version = "1.1", features = [
  "client",
  "runtime",
  "rustls-tls",
], default-features = false }
k8s-openapi = { version = "0.25", features = ["v1_30"] }
json-patch = "4.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
